--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -2689,7 +2689,7 @@
 				//add link so text toggles checkbox
 				str += "<a style='text-decoration:none;color:black;' href='javascript:" +
 						"var el = document.getElementsByClassName(\"memberConfigCheckbox\");" +
-						"el[" + i + "].checked = !el[" + i + "].checked;" +
+						"var forFirefox = (el[" + i + "].checked = !el[" + i + "].checked);" +
 						"'>";
 				//add checkbox
 				str += "<input type='checkbox' class='memberConfigCheckbox' value='" + 
