added data type UniqueData and fixed checks for json loading

--- a/WebGUI/html/ConfigurationTableEditor.html
+++ b/WebGUI/html/ConfigurationTableEditor.html
@@ -23,7 +23,7 @@
 		var _CONFIG_FIXED_CELLS = 3;
 	
 
-		var _typeArray = ["Data","OnOff","TrueFalse","YesNo","ChildLinkUID","ChildLinkGroupID","ChildLink","GroupID"];
+		var _typeArray = ["Data","UniqueData", "OnOff","TrueFalse","YesNo","ChildLinkUID","ChildLinkGroupID","ChildLink","GroupID"];
 		var _dataTypeArray = ["VARCHAR2","NUMBER","TIMESTAMP WITH TIMEZONE"];
 				
 		var _editingCell = false;
