more fixes for MM

--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -770,6 +770,23 @@
 			  </center>
 			</div>
 		</div>
+		<div id="popupMacroAlreadyExists" class="smallPopup">
+			<h4><span id="duplicateName" class="red"></span> already exists. Do you wish to overwrite?</h4>
+		    <div class="buttongroup">
+		      <center>
+				<button id="popupMacroAlreadyExistsOverwrite">Yes, please</button>
+				<button id="popupMacroAlreadyExistsCancel">Cancel</button>
+			  </center>
+			</div>
+		</div>
+		<div id="popupMacroEditDuplicateName" class="smallPopup">
+			<h4><span id="duplicateNameEdit" class="red"></span> already exists. Please enter another name.</h4>
+		    <div class="buttongroup">
+		      <center>
+				<button onclick="hideSmallPopup(this)">Okay</button>
+			  </center>
+			</div>
+		</div>
 	  <nav id="context-menu" class="context-menu">
 	    <ul class="context-menu__items">
 	      <li class="context-menu__item">
