checkpoint fixed new group handling and tree view refresh

--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -266,7 +266,7 @@
         }
         
         .red{
-        	color: #993333 !important;
+        	color: rgb(253, 195, 195) !important;
         }
 
         .dropdown{
