--- a/WebGUI/html/Physics.html
+++ b/WebGUI/html/Physics.html
@@ -163,6 +163,10 @@
 
 			@-moz-keyframes animate-stripes {
 				0% {background-position: 0 0;} 100% {background-position: 60px 0;}
+			}			
+			
+			#parameter-setup td {
+				text-align: left;
 			}
 		</style>
 
@@ -204,7 +208,7 @@
             
 
 			var _PARAMETER_SETUP_MIN_HEIGHT = 25; 
-			var _PARAMETER_SETUP_MAX_HEIGHT = 300; 
+			var _PARAMETER_SETUP_MAX_HEIGHT = 100; 
 			var _PARAMETER_SETUP_WIDTH = 260; 
 			
 			var _EXTRAS_WIDTH = 200; 
