checkpoint working on FE macros

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -4448,7 +4448,7 @@
 			el.style.height = h + "px";
 
 			Debug.log("Previous filter = " + lastTreeFilter_);
-			var defaultFilter = lastTreeFilter_ == ""?"*Port":lastTreeFilter_;
+			var defaultFilter = lastTreeFilter_ == ""?"*Port*":lastTreeFilter_;
 			
 			var str = "<a id='" + 
 					Debug._errBoxId + 
