--- a/WebGUI/html/FEMacroTest.html
+++ b/WebGUI/html/FEMacroTest.html
@@ -331,7 +331,7 @@
 			}
 			
 			DesktopContent.XMLHttpRequest("MacroMakerRequest?RequestType=runFEMacro" +
-					"&feSupervisorType" + feSupervisorType + 
+					"&feSupervisorType=" + feSupervisorType + 
 					"&supervisorLID=" + supervisorLID +
 					"&feUID=" + feUID +
 					"&macroName=" + macroName
