--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -65,30 +65,10 @@
 		    cursor:				pointer;
 		}
 		
-		.gotoNavDiv {
-			background-image: 	url(/WebPath/images/windowContentImages/ConfigurationGUI-gotoNav.png);
-			width: 				8px;
-			height: 			7px;
-		} 
-
 		.treeNode-Children {
 			border-left: 		1px solid rgb(181, 170, 210);
 		}
 		
-		.tableView-Menu {
-			float:				left;
-		    margin: 			4px 10px 3px 0;
-		    padding: 			3px 4px 3px 4px;
-		    border-radius: 		3px;
-		    background-color: 	rgb(177, 195, 195);
-		    color: 				rgb(44, 44, 187);
-		    font-size:			14px;
-		} .tableView-Menu:hover {
-			background-color:	rgb(218, 194, 194);
-		    margin: 			3px 10px 4px 0;
-		    cursor:				pointer;
-		}
-
 		#activateConfigWithWarnings {
 			margin-top: 10px;
 		    font-size: 14px;
@@ -295,7 +275,7 @@
 			//configCopyRow(deleteSrc)					//copy/move row from source to destination row			
 			//jump(anchor)
 			//evaluateJS(str)			
-			//createEditTableMenu()
+			//createEditTableMenu(event)
 	
 		/////////////////////////////////////////////////////////////////////////////////////////
 		/////////////////////////////////////////////////////////////////////////////////////////
@@ -3800,7 +3780,7 @@
 			{
 				if(_editingCellEl == el) //if same cell do nothing
 					return true;
-				editCellCancel(); //if new cell cancel
+				editCellOK(); //editCellCancel(); //if new cell cancel
 			}
 			
 			var tableEl = document.getElementById("SubSystemTable");
